Activate Patch for handleChildren

--- a/creDevVue/Dockerfile
+++ b/creDevVue/Dockerfile
@@ -47,7 +47,7 @@ RUN npm install --save core-js@2 # needs version 2 for now (instead of 3)
 #RUN npm install --save babel-polyfill
 RUN npm install --save c4u-glue
 RUN npm-install-peers
-RUN v ${CRE_VERSION}.0
+RUN v "${CRE_VERSION}.0"
 ##
 WORKDIR "/cre/node/cre-components"
 
