require vs install

--- a/crePhpDev/Dockerfile
+++ b/crePhpDev/Dockerfile
@@ -36,7 +36,7 @@ RUN apt-get update \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/* ~/.composer
 
-RUN composer install global letudiant/composer-shared-package-plugin
+RUN composer require global letudiant/composer-shared-package-plugin
 
 COPY cre /cre
 
