--- a/crePhpPackages/Dockerfile
+++ b/crePhpPackages/Dockerfile
@@ -21,8 +21,8 @@ LABEL Name="Php Packages for CRE" \
       OS="Ubuntu:$UBUNTU_VERSION" \
       Build_=$CRE_VERSION 
 
-RUN composer global require letudiant/composer-shared-package-plugin
-RUN composer global require --optimize-autoloader yiisoft/yii2-app-basic  #yii2
+#RUN composer global require letudiant/composer-shared-package-plugin
+##RUN composer global require --optimize-autoloader yiisoft/yii2-app-basic  #yii2
 RUN composer global require --optimize-autoloader yiisoft/yii-project-template #yii3
 RUN composer global require --optimize-autoloader yiisoft/yii-base-web         #yii3
 
