--- a/crePhpPackages/Dockerfile
+++ b/crePhpPackages/Dockerfile
@@ -37,7 +37,7 @@ RUN composer global config prefer-stable true
 RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2
 RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-bootstrap
 #RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-swiftmailer
-RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-debug
+#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-debug                                   ?? :@dev
 RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-gii
 RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-faker
 RUN composer global require --prefer-stable --update-with-all-dependencies codeception/base
