--- a/crePhpPackages/Dockerfile
+++ b/crePhpPackages/Dockerfile
@@ -38,7 +38,7 @@ RUN composer global require --prefer-stable --update-with-all-dependencies yiiso
 RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-bootstrap
 #RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-swiftmailer
 #RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-debug                                   ?? :@dev
-RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-gii
+#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-gii
 RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-faker
 RUN composer global require --prefer-stable --update-with-all-dependencies codeception/base
 RUN composer global require --prefer-stable --update-with-all-dependencies phpunit/phpunit
