--- a/crePhpPackages/Dockerfile
+++ b/crePhpPackages/Dockerfile
@@ -30,25 +30,31 @@ RUN cd /cre/tmp/php/packages
 
 RUN composer global config minimum-stability dev
 RUN composer global config prefer-stable true
+#RUN composer global config repositories [{"type:" "composer", "url:" "https://asset-packagist.org"}]
+RUN composer global config repositories "composer" "https://asset-packagist.org"
+
+# npm
+RUN composer global require --prefer-stable --update-with-all-dependencies "npm-asset/jquery"
+#RUN composer global require --prefer-stable --update-with-all-dependencies "bower-asset/bootstrap"
 
 #RUN composer global require letudiant/composer-shared-package-plugin
 # yii2
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-app-basic 
 RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2
 RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-bootstrap
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-swiftmailer
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-debug                                   ?? :@dev
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-gii
 RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-faker
 RUN composer global require --prefer-stable --update-with-all-dependencies codeception/base
 RUN composer global require --prefer-stable --update-with-all-dependencies phpunit/phpunit
 RUN composer global require --prefer-stable --update-with-all-dependencies codeception/verify
 RUN composer global require --prefer-stable --update-with-all-dependencies symfony/browser-kit
 #RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-queue
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-swiftmailer
+#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-debug 
+#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-gii
+#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-app-basic 
 
 # yii3
 ##bower-asset/jquery
-RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-project-template 
+#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-project-template 
 RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-core
 RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-base-web
 RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-base-cli
