--- a/crePhpPackages/Dockerfile
+++ b/crePhpPackages/Dockerfile
@@ -31,7 +31,8 @@ RUN cd /cre/tmp/php/packages
 RUN composer global config minimum-stability dev
 RUN composer global config prefer-stable true
 #RUN composer global config repositories [{"type:" "composer", "url:" "https://asset-packagist.org"}]
-RUN composer global config repositories "composer" "https://asset-packagist.org"
+##RUN composer global config repositories "composer" "https://asset-packagist.org"
+RUN composer global config repositories.nmp composer https://asset-packagist.org
 
 # npm
 RUN composer global require --prefer-stable --update-with-all-dependencies "npm-asset/jquery"
